# python-project-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
data/private/: .gitignore  README.md
data/private/processed/: .gitkeep
data/public/: README.md
src/pkg/: __init__.py
tests/: __init__.py
tests/integration/: __init__.py  test_pkg.py
tests/unit/: __init__.py
