[project]
name = "python-project-template"
dynamic = ["version"]
description = "Simple template to kickstart a new Python project"
authors = [
    {name = "Dantos7", email = "daniel.tosone@gmail.com"},
]
maintainers = [
    {name = "Dantos7", email = "daniel.tosone@gmail.com"},
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.14,<4.0" # Specify your supported Python versions here
dependencies = [
    # "loguru (>=0.7.2,<1.0.0)",
    # "python-dotenv (>=1.1.1,<2.0.0)",
    # "polars (>=1.31.0,<2.0.0)",
    # ...
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/pkg"]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"
vcs = "git"
style = "pep440"
bump = true

# * Uncomment here if you need to use a private registry
# [[tool.uv.index]]
# name = "private-registry"
# url = "https://pkgs.dev.azure.com/<ORGANIZATION>/<PROJECT>/_packaging/<FEED>/pypi/simple/"

[tool.uv]
default-groups = ["dev", "docs", "lint", "test"]
required-version = ">=0.9.9"

[dependency-groups]
dev = [
    "pre-commit (>=4.4.0,<5.0.0)",
    "poethepoet (>=0.37.0,<1.0.0)",
    "dvc[s3] (>=3.64.0,<4.0.0)",
    # "typer (>=0.20.0,<1.0.0)",
    # ...
]
lint = ["mypy>=1.11.2", "ruff>=0.14.5"]
docs = [
    # "mkdocs (>=1.6.1,<2.0.0)",
    # "mkdocs-material[imaging] (>=9.7.0,<10.0.0)",
    # "mkdocs-glightbox>=0.5.2",
    # "mkdocs-llmstxt>=0.4.0",
    # "mkdocs-redirects>=1.2.2",
    # "mkdocstrings-python>=1.19.0",
    # "griffe-warnings-deprecated>=1.1.0",
    # ...
]
test = [
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "coverage (>=7.11.3,<8.0.0)",
    # ...
]

[tool.poe.tasks]
version = "uvx uv-dynamic-versioning"
test = "coverage run -m pytest tests --ff -vv"


[tool.pytest]
addopts = ["--import-mode=importlib"]
asyncio_default_fixture_loop_scope = "function"  # Or class, module, package, session

[tool.coverage.run]
include = ["src/api/*"]  # Comment to include also tests/ code (may help to find unused functions)

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 140
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]  # Refer to https://docs.astral.sh/ruff/rules/ and click on the specific rule to understand why it is important
ignore = [
    "COM819",  # Trailing comma prohibited -> handled by formatter
    "D203",  # 1 blank line required before class docstring -> conflicts with D211, pydocstyle default ignore
    "D206",  # Docstring should be indented with spaces, not tabs -> handled by formatter
    "D213",  # Multi-line docstring summary should start at the second line -> conflicts with D212, pydocstyle default ignore for Google style
    "D404",  # First word of the docstring should not be "This" -> pydocstyle default ignore for Google style
    "E501",  # Line too long -> handled by formatter
    "EM101",  # Exception must not use a string literal, assign to variable first -> too much boilerplate code in many cases
    "EM102",  # Exception must not use an f-string literal, assign to variable first -> too much boilerplate code in many cases
    "FIX",  # Check for FIXME, TODO and other temporary developer notes -> good to have some punctual TODO comments
    "PLR0913",  # Too many arguments to function call ({arguments} > {max_arguments}) -> sometimes necessary for clarity
    "PLR0915",  # Too many statements ({statements} > {max_statements}) -> sometimes necessary, complexity is measured by McCabe
    "RET504",  # Unnecessary assignment to {name} before `return` statement -> useful for clarity
    "TD",  # Check TODOs in the project -> good to have some punctual TODO comments
    "TRY003",  # Avoid specifying long messages outside the exception class -> too much boilerplate code in many cases, overly sensitive
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["S101"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true

# [!NOTE] uv-dynamic-versioning plugin doesn't work with the uv build backend right now. (ref. https://github.com/astral-sh/uv/issues/14561)
[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"
